Resolved no wrapping of paragraph for long text questions

--- a/src/containers/GeneratedPage/GeneratedPage.css
+++ b/src/containers/GeneratedPage/GeneratedPage.css
@@ -14,8 +14,11 @@ ol {
 }
 
 p {
+    display: flex;
+    width: 100%;
     margin: 0;
-    white-space: pre;
+    white-space: pre-wrap;
+    text-align: justify;
 }
 .SectionPart {
     display: flex;
